# openevo

./: Dockerfile  README.md  README.zh.md  pyproject.toml
docs/: ARCHITECTURE.md  PLUGIN_GUIDE.md
plugins/claude-code-plugin/: install.sh  plugin.json
plugins/claude-code-plugin/hooks/: hooks.json
plugins/claude-code-plugin/hooks/scripts/: inject-memories.mjs  session-context.mjs  session-summary.mjs  store-memories.mjs  utils.mjs
plugins/openclaw-plugin/: index.js  install.mjs  openclaw.plugin.json  package.json
plugins/openclaw-plugin/src/: client.js  engine.js
scripts/: bootstrap.ps1  bootstrap.sh  install-plugins.sh
src/openevo/: __init__.py  cli.py
src/openevo/api/: __init__.py  agent_routes.py  experience_routes.py  learning_routes.py  market_routes.py  memory_routes.py  notes_routes.py  server.py
src/openevo/config/: __init__.py  settings.py  watcher.py
src/openevo/connectors/: __init__.py  base.py  chat_adapter.py  code_adapter.py  doc_adapter.py  error_adapter.py  tool_adapter.py
src/openevo/core/: __init__.py  agent_coordination.py  embeddings.py  evolution_market.py  experience_graph.py  experience_models.py  experience_space.py  experience_store.py  learning.py  logging_config.py  memory.py  notes.py  observer.py
src/openevo/core/embedding_backends/: __init__.py  hash_provider.py  sentence_transformer_provider.py
src/openevo/core/stores/: __init__.py  base.py  factory.py  (+4 more)
src/openevo/plugins/: __init__.py
tests/: test_concurrency.py  test_experience_backends.py  test_experience_oes.py  test_integration_config.py  test_smoke.py
