[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "openevo"
version = "0.1.0"
description = "OpenEvo: memory, closed-loop learning, and structured notes — with Claude Code & OpenClaw plugins"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OpenEvo" }]
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "python-dotenv>=1.0.0",
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "watchdog>=4.0.0",
  "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0", "pytest-asyncio>=0.23.0"]
prod = []
experience = [
  "qdrant-client>=1.7.0",
  "neo4j>=5.15.0",
  "sentence-transformers>=2.2.0",
]

[project.scripts]
evo = "openevo.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/openevo"]

[tool.hatch.build.targets.sdist]
include = ["src/openevo", "README.md", "plugins", "scripts", "docs"]
